# static_hal_stm32

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md
extra/: _reset_hardware.c  _startup.c
include/: etl_profile.h  sys_config.hpp
libs/: CMakeLists.txt
libs/Device/ST/STM32F4xx/Include/: stm32f411xe.h
libs/FreeRTOS/: heap_4.c
libs/FreeRTOS/include/: FreeRTOS.h  portmacro.h
libs/include/: FreeRTOSConfig.h  xprintf.h
libs/src/: _mem.c  _startup.c  system_init.cpp  system_stm32f4xx.c
libs/superlib/inc/: dma.hpp  os_abstraction.hpp  supergpio.hpp
libs/superlib/include/: mcu_base.hpp  mcu_clk.hpp  uart.hpp
libs/superlib/src/: dma.cpp  os_abstraction.cpp  supergpio.cpp  uart.cpp
scripts/: dma_format.py  pins_AF.csv  sections.ld  startup_stm32f411xe.s
scripts/CMake/: Toolchain.cmake
src/: main.cpp
static_hal/include/: basic_format.hpp  dma.hpp  dma_format.hpp  mcu_base.hpp
static_hal/src/: mcu_base.cpp
static_hal/support/src/: _cxx.cpp  _mem.c  _syscalls.c  system_init.cpp
